--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "张海阅的个人主页"
-description              : "张海阅 - 计算机科学 | 学术主页 "
+description              : "张海阅 - 计算机科学与技术 | 学术主页 "
 repository               : "zhangHaiYue0/zhangHaiYue0.github.io"
 google_scholar_stats_use_cdn : true
 
