--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "张海阅"
   avatar           : /images/avatar.jpg
-  bio              : "上海交通大学<br>计算机科学与技术<br>25级本科生"
+  bio              : "上海交通大学 计算机学院<br>计算机科学与技术专业<br>25级本科生"
   location         : "中国 上海"
   employer         :
   pubmed           : 
