Update _config.yml 更新导航栏配置，只保留4个选项

--- a/_config.yml
+++ b/_config.yml
@@ -161,3 +161,16 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+# ===================================
+# 导航栏配置
+# ===================================
+nav:
+  - title: Homepage
+    url: /
+  - title: 个人简介
+    url: /about/
+  - title: 获奖信息
+    url: /honors/
+  - title: 发表论文
+    url: /publications/
