--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,9 @@
-# main links links
 main:
-  - title: "About Me"
-    url: "/#about-me"
-
-  - title: "News"
-    url: "/#-news"
-
-  - title: "Publications"
-    url: "/#-publications"
-
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
-
-  - title: "Educations"
-    url: "/#-educations"
-
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
-
-  - title: "Internships"
-    url: "/#-internships"
+  - title: "Homepage"
+    url: "/"
+  - title: "个人简介"
+    url: "/about/"
+  - title: "获奖信息"
+    url: "/honors/"
+  - title: "发表论文"
+    url: "/publications/"
